force-app/main/default/objects/Cart__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>The account of the customer who has created the cart record</inlineHelpText>
    <label>Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>