force-app/main/default/objects/Cart__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The customer record who have created the cart</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>