force-app/main/default/objects/Cart__c/validationRules/Customer_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_VR</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK(Customer__c ) )</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>The customer record who have created the cart</errorMessage>
</ValidationRule>